<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center"
    tools:context="${relativePackage}.${activityClass}" >

    <TableLayout
        android:id="@+id/reg_tblay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TableRow
            android:id="@+id/reg_tbr_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/reg_tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_tv_username" />

            <EditText
                android:id="@+id/reg_edt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reg_edtusername_init" />
        </TableRow>

        <TableRow
            android:id="@+id/reg_tbr_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/reg_tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_tv_password" />

            <EditText
                android:id="@+id/reg_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/reg_edtpwd_init"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:id="@+id/reg_tbr_pwdagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/reg_tv_pwdagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_tv_pwdagain" />

            <EditText
                android:id="@+id/reg_edt_pwdagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="7"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:id="@+id/reg_tbr_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/reg_tblay"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/reg_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_shape"
            android:onClick="doReg"
            android:text="@string/reg_btn_register" />

        <Button
            android:id="@+id/reg_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/btn_shape"
            android:onClick="doReset"
            android:text="@string/reg_btn_reset" />
    </LinearLayout>

</RelativeLayout>