<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/main_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_liner_userinfor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50dp" >

            <EditText
                android:id="@+id/main_edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/username_init" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/main_edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/pwd_init"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/main_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_shape"
                android:onClick="doLogin"
                android:text="@string/login_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/main_edt_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="7"
                android:text="@string/login_forgetpwd"
                android:textColor="@color/login_txt_new" />

            <TextView
                android:id="@+id/main_edt_newuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:clickable="@bool/lable_click"
                android:onClick="goReg"
                android:text="@string/login_newuser"
                android:textColor="@color/login_txt_new" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>